@@ -1,5 +1,11 @@
 2011-01-04  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* lib/Foomatic/DB.pm: Improved code of the _get_xml_filelist()
+	  function: This avoids repeated construction of the "names-$dir"
+	  string and a crash of Perl if the directory does not contain any
+	  XML file (bug #613). Thanks to Christopher Yeleighton (giecrilj at
+	  stegny dot 2a dot pl) for the report.
+
 	* lib/Foomatic/DB.pm: Fixed wrong quotes in error message which
 	  prevented a variable from being substituted by its value (bug
 	  #612). Thanks to Christopher Yeleighton (giecrilj at stegny dot 2a
